tests/ui/consts/const-eval/ub-upvars.32bit.stderr
error[E0080]: constructing invalid value: encountered a null reference
  --> $DIR/ub-upvars.rs:8:42
   |
LL |     let bad_ref: &'static u16 = unsafe { mem::transmute(0usize) };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD_UPVAR` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
